--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="home-content">
       <h1>Oi, eu sou a <span>Jessica</span></h1>
       <h3><span>Desenvolvedora Fullstack</span></h3>
-      <p>Transformo ideias em código para criar experiências digitais intuitivas e eficientes. Meu objetivo é desenvolver soluções que realmente fazem a diferença, unindo criatividade e funcionalidade.</p>
+      <p>Transformo ideias em código para criar experiências digitais intuitivas e eficientes. Meu objetivo é desenvolver soluções que realmente façam a diferença, unindo criatividade e funcionalidade.</p>
 
       <div class="social-icons">
         <a href="https://github.com/jessicagomess" target="_blank">
