--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="serviço-box">
         <div class="serviço-info">
           <i class="bx bx-code-curly"></i>
-          <h4>Desenvolvimendo Backend</h4>
+          <h4>Desenvolvimento Backend</h4>
           <p>Criação e otimização de APIs e sistemas robustos utilizando tecnologias como Java e Spring Boot. Foco em performance, segurança e escalabilidade, garantindo integração eficiente entre o frontend e o banco de dados.</p>
         </div>
       </div>
