--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p>Participei do desenvolvimento de uma API REST para o gerenciamento de seguros, utilizando Java com Spring Boot e Spring Security, focando na segurança e conformidade com a LGPD. Fiquei responsável pelo desenvolvimento do frontend, criando a interface e design com React e JavaScript, além de contribuir para a implementação do backend. Trabalhei na criação de CRUDs, consumo de APIs com Fetch API e Axios, e na integração com bancos de dados MySQL e PostgreSQL. O projeto seguiu metodologias ágeis e foi hospedado na plataforma Render, garantindo eficiência e escalabilidade.
         </p>
         <div class="btn">
-          <a href="https://melodic-bavarois-367b7f.netlify.app/" target="_blank">Acessar Projeto</a>
+          <a href="https://segurize.netlify.app/" target="_blank">Acessar Projeto</a>
         </div>
       </div>
     </div>
